# LIME_Neon_Openmp

./: LICENSE  README.md
Lime_NEON+OpenMP/: CMakeLists.txt  lime_opt.cpp
Lime_NEON+OpenMP/include/: lime.h  omp.h
